# simple-graph

./: .gitignore  README.md  compose.yml  pyproject.toml  temp.ipynb
docs/: attack.txt
src/: constants.py  main.py  text_process.py
